--- a/blog_list.html
+++ b/blog_list.html
@@ -7,6 +7,10 @@
       rel="stylesheet"
       type="text/css"
     />
+    <script
+      src="https://kit.fontawesome.com/97ed971809.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -60,7 +64,13 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
+              <a
+                class="nav-link"
+                href="#"
+                data-toggle="modal"
+                data-target="#loginModal"
+                >Log In</a
+              >
             </li>
           </ul>
           <!-- <form class="form-inline my-2 my-lg-0">
@@ -70,6 +80,71 @@
         </div>
       </div>
     </nav>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="loginModal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="loginModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">
+              <i class="fa-solid fa-right-to-bracket"></i>&nbsp Log In
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-6">
+                <button
+                  type="button"
+                  class="btn btn-outline-dark btn-block btn-sm"
+                >
+                  <i class="fa-brands fa-google"></i>&nbsp &nbsp Log in with
+                  google
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-outline-dark btn-block btn-sm"
+                >
+                  <i class="fa-regular fa-envelope"></i>&nbsp &nbsp Login with
+                  E-main
+                </button>
+              </div>
+              <div class="col-md-6">
+                <button class="btn btn-outline-dark btn-block btn-sm">
+                  <i class="fa-regular fa-envelope"></i>&nbsp &nbsp Sign Up with
+                  E-main
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              <!-- bootstrap 5버전에서는 data-bs-dismiss적용이 안된다 때문에 data-dismiss를 써야 함 -->
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container my-3">
       <div class="row">
         <div class="col-md-8 col-lg-9">
